// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubagentProgressDisplay /> > renders cancelled state correctly 1`] = `
"Subagent TestAgent was cancelled.
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with command fallback 1`] = `
"Subagent TestAgent is working...

⠋  run_shell_command echo hello
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with description in args 1`] = `
"Subagent TestAgent is working...

⠋  run_shell_command Say hello
"
`;

exports[`<SubagentProgressDisplay /> > renders correctly with file_path 1`] = `
"Subagent TestAgent is working...

✓  write_file /tmp/test.txt
"
`;

exports[`<SubagentProgressDisplay /> > renders thought bubbles correctly 1`] = `
"Subagent TestAgent is working...

💭 Thinking about life
"
`;

exports[`<SubagentProgressDisplay /> > truncates long args 1`] = `
"Subagent TestAgent is working...

⠋  run_shell_command This is a very long description that should definitely be tr...
"
`;
